[package]
name = "tokio-taskdump"
version = "0.1.0"
edition = "2024"
rust-version = "1.95"
authors = ["Tokio Contributors <team@tokio.rs>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/tokio-rs/tokio-taskdump"
homepage = "https://tokio.rs"
description = "Utilities for task dumps with Tokio"
categories = ["asynchronous", "development-tools::debugging"]

[dependencies]
